# udacity_agentic_ai-agentic-workflow

./: .gitignore  README.md  pyproject.toml  requirements.txt
starter/phase_1/: action_planning_agent.py  augmented_prompt_agent.py  direct_prompt_agent.py  evaluation_agent.py  evaluation_agent_evidence.md  knowledge_augmented_prompt_agent.py  rag_knowledge_prompt_agent.py  routing_agent.py
starter/phase_1/workflow_agents/: base_agents.py
starter/phase_2/: agentic_workflow.py
starter/phase_2/workflow_agents/: base_agents.py
